# Quant-Trading

./: .gitignore  README.md  config.yaml  login.py  main.py  pyproject.toml  strategy_live.py  visualize_backtest.py
.cursor/: mcp.json
backtest/: backtest_v2_15m.py  engine.py  metrics.py
bot/: base_strategy.py  executor.py  indicators.py  risk.py  state.py  strategy.py  strategy_cpr.py  strategy_v2_1.py  strategy_vwap.py
data/: feed.py  historical.py  indicators.py  store.py
infra/: broker.py  notify.py
notebooks/: analyze_portfolio.ipynb  backtest_analysis.ipynb
scripts/: auth.py  extract_historical_nifty.py  find_key.py  get_data.py  main.py
tests/: test_upstox.py  test_websocket.py
